@@ -27,6 +27,7 @@
 - Added command line option --rz to CLI. (Johannes)
 - Added closure $this support back. (Stas)
 - Added SplObjectStorage::getHash() hook. (Etienne)
+- Added JSON_Serializable interface (json_encode() calls $obj->jsonSerialize()). (Sara)
 
 - default_charset if not specified is now UTF-8 instead of ISO-8859-1. (Rasmus)
 
